--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Directory</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <div id="container">
+        <h1>Awesome startup employee directory</h1>
+        <main id="employee-main">
+
+        </main>
+    </div>
+    <script src="js/app.js"></script>
 </body>
 </html>
