--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div id="container">
-        <h2>Awesome startup employee directory</h2>
+        <header class="header">
+            <h2>Awesome startup employee directory</h2>
+            <input class="search" type="text" placeholder="Search for name">
+        </header>
         <main id="employee-main">
 
         </main>
