finished search feature

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="container">
         <header class="header">
             <h2>Awesome startup employee directory</h2>
-            <input class="search" type="text" placeholder="Search for name">
+            <input id="search" class="search" type="text" placeholder="Search for name">
         </header>
         <main id="employee-main">
 
